Updated Account Management

--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -329,11 +329,8 @@ textarea:required:valid {
 
 /* Form Formatting */
 
-#registrationform {
-    width: calc(75%);
-    margin: 0 auto;
-}
-
+#registrationform,
+#passwordform,
 #loginform {
     width: calc(75%);
     margin: 0 auto;
