--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -74,8 +74,7 @@ header {
 
 #logo {
     display: flex;
-    width: 10vw;
-    height: 45px;
+    width: 30vw;
     padding: 0 0 0 5px;
 }
 
@@ -121,19 +120,60 @@ header {
 }
 
 #folder {
+    display: none;
     max-width: 15px;
     max-height: 15px;
     padding-right: 10px;
 }
 
-nav {
-    display: inline-flex;
-    flex-direction: column;
-    max-width: 100%;
-    background-color: #de2226;
+.link {}
+
+.navigation {
+    display: none;
 }
 
-nav ul {
+.hamburger {
+    display: block;
+    position: absolute;
+    top: 3rem;
+    right: 1rem;
+}
+
+.navigation.responsive {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    color: #000;
+    margin-top: 30px;
+}
+
+.navigation.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.navigation.responsive li {
+    background-color: #eee;
+    display: block;
+    width: 100%;
+    margin: 2px 0;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+.navigation.responsive a {
+    float: none;
+    display: block;
+    text-align: center;
+    color: #000;
+}
+
+.navigation.responsive li a:hover {
+    background-color: #ddd;
+}
+
+.navigation ul {
     display: inline-flex;
     color: #fff;
     margin: 3px 0 0 0;
@@ -142,14 +182,14 @@ nav ul {
     text-align: center;
 }
 
-nav ul li {
+.navigation ul li {
     width: 100vw;
     list-style: none;
     font-size: 1em;
 }
 
-nav ul li:hover,
-nav ul li a:hover {
+.navigation ul li:hover,
+.navigation ul li a:hover {
     background-color: #808080;
     color: #000;
 }
@@ -164,7 +204,7 @@ nav ul li a:hover {
     text-decoration: none;
 }
 
-nav a {
+.navigation a {
     color: #fff;
     text-decoration: none;
 }
@@ -485,7 +525,8 @@ input:checked~label {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 #prod-display li {
@@ -493,11 +534,12 @@ input:checked~label {
     border: 1px #ccc solid;
     list-style-type: none;
     flex: 1 1 auto;
+    width: 200px;
+    text-align: center;
 }
 
 #prod-display li img {
-    width: 100%;
-    height: 200px;
+    height: 100px;
 }
 
 .prodInfo {
@@ -577,29 +619,44 @@ input:checked~label {
         margin-right: 30px;
         font-size: 1.25em;
     }
+    #welcome {
+        padding-right: 10px;
+        display: flex;
+    }
     #folder {
+        display: flex;
         max-width: 20px;
         max-height: 20px;
         padding-right: 10px;
     }
-    nav {
-        display: inline-flex;
-        flex-direction: column;
-        background-color: #de2226;
-        max-width: 100vw;
+    .hamburger {
+        display: none;
     }
-    nav ul {
+    nav,
+    .navigation {
+        display: inline-flex;
+        flex-direction: row;
+        max-width: 100%;
+        background-color: #de2226;
+        font-size: 1.25em;
+    }
+    .navigation {
         display: inline-flex;
         color: #fff;
         margin: 3px 0 0 0;
-        padding: 0;
-        line-height: 1.75em;
+        padding: 0 5px 0 5px;
+        line-height: 2em;
         text-align: center;
     }
-    nav ul li {
-        width: calc(15%);
+    .navigation li {
+        width: 100vw;
         list-style: none;
-        font-size: 1.25em;
+        font-size: 1em;
+    }
+    .navigation li:hover,
+    .navigation li a:hover {
+        background-color: #808080;
+        color: #000;
     }
     .active {
         background-color: #fff;
@@ -609,7 +666,7 @@ input:checked~label {
         color: #de2226;
         text-decoration: none;
     }
-    nav a {
+    .navigation a {
         color: #fff;
         text-decoration: none;
     }
@@ -712,6 +769,38 @@ input:checked~label {
         margin: 0;
         text-align: center;
     }
+    #prod-display {
+        margin: 0;
+        padding: 0;
+        display: flex;
+        flex-direction: row;
+    }
+    #prod-display li {
+        margin-bottom: .5em;
+        border: 1px #ccc solid;
+        list-style-type: none;
+        flex: 1 1 auto;
+        width: 200px;
+        text-align: center;
+    }
+    .prodInfo {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+    }
+    .prodImage {
+        display: flex;
+        flex-direction: row;
+    }
+    #prodImage {
+        width: calc(90%);
+        height: calc(90%);
+    }
+    .prodDetails {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
 }
 
 @media only screen and (min-width: 960px) {
@@ -755,7 +844,7 @@ input:checked~label {
     }
     .logo {
         display: flex;
-        flex-basis: 50%;
+        flex-basis: 45%;
     }
     #logo {
         display: flex;
@@ -770,38 +859,54 @@ input:checked~label {
         margin-right: 30px;
         font-size: 1.5em;
     }
+    #welcome {
+        padding-right: 10px;
+        display: flex;
+    }
     #folder {
+        display: flex;
         max-width: 30px;
         max-height: 30px;
         padding-right: 10px;
     }
+    .hamburger {
+        display: none;
+    }
     nav {
         display: inline-flex;
         flex-direction: column;
+        max-width: 100%;
         background-color: #de2226;
     }
-    nav ul {
+    .navigation {
         display: inline-flex;
         color: #fff;
-        margin-bottom: 0;
-        padding: 5px 5px 0 5px;
-        line-height: 3em;
+        margin: 3px 0 0 0;
+        padding: 0 5px 0 5px;
+        line-height: 2em;
         text-align: center;
+        flex-direction: row;
+        font-size: 1.5em;
     }
-    nav ul li {
-        width: 150px;
+    .navigation li {
+        width: 100vw;
         list-style: none;
-        font-size: 2em;
+        font-size: 1em;
+    }
+    .navigation li:hover,
+    .navigation li a:hover {
+        background-color: #808080;
+        color: #000;
     }
     .active {
         background-color: #fff;
         margin-right: 5px;
     }
-    .active a {
+    li.active a {
         color: #de2226;
         text-decoration: none;
     }
-    nav a {
+    .navigation a {
         color: #fff;
         text-decoration: none;
     }
@@ -905,7 +1010,7 @@ input:checked~label {
         justify-content: flex-start;
     }
     #prod-display li {
-        max-width: 200px;
+        width: 200px;
         flex: 1 0 auto;
         text-align: center;
         max-height: 400px;
