--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -459,11 +459,11 @@ input:focus~label,
 textarea:focus~label,
 select:focus~label {
     color: #933;
-    font-weight: 7old;
+    font-weight: 700;
 }
 
 input:checked~label {
-    font-weight: 7old;
+    font-weight: 700;
 }
 
 .inv-items {
@@ -562,7 +562,7 @@ input:checked~label {
 }
 
 #prodDescription {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: normal;
     margin: 0;
 }
@@ -1052,6 +1052,7 @@ input:checked~label {
         flex-direction: row;
     }
     #prodImage {
+        max-width: 400px;
         max-height: 300px;
     }
     .prodDetails {
