--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -42,6 +42,7 @@ body {
     flex-flow: nowrap;
     flex: 1 1 auto;
     width: 100vw;
+    max-height: 100vw;
 }
 
 .content {
@@ -86,6 +87,10 @@ header {
     padding-right: 10px;
 }
 
+#loggedin {
+    display: flex;
+    flex-direction: column;
+}
 #logout,
 #update {
     background-color: #ee3333;
@@ -620,6 +625,32 @@ input:checked~label {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
+/* This is for the remaining Characters in a text field */
+#charcount {
+    flex-basis: 100%;
+    justify-content: center;
+    display: flex;
+    order: 3;
+}
+
+.input-group {
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: row;
+    padding: 10px 0;
+    background-color: #e9f2f9;
+    flex-wrap: wrap;
+}
+
+.input-group-addon {
+    display: flex;
+    align-items: flex-start;
+}
+
+.input-group .input-group-addon .fa {
+    background-color: #D9853B;
+    padding: 5px;
+}
 
 /*
 *
@@ -1088,9 +1119,10 @@ input:checked~label {
         flex: 1 1 auto;
         flex-direction: row;
         justify-content: flex-end;
+        align-items: center;
     }
     #welcome {
-        padding-right: 10px;
+        padding-right: 15px;
         display: flex;
     }
     #folder {
@@ -1143,7 +1175,7 @@ input:checked~label {
     main {
         display: flex;
         flex-direction: column;
-        padding-bottom: 2.5em;
+        padding-bottom: 10px;
         background-color: #fff;
         flex-wrap: wrap;
         padding-left: 10px;
@@ -1350,7 +1382,7 @@ input:checked~label {
         margin: 0 auto;
     }
     fieldset {
-        width: 25em;
+        width: 40em;
         margin: 10px 10px 30px 10px;
         border: 0 none;
     }
@@ -1418,5 +1450,16 @@ input:checked~label {
     }
     input:checked~label {
         font-weight: 700;
+    }
+    .input-group-addon {
+        display: flex;
+        align-items: flex-start;
+        order: 2;
+        padding-right: 3px;
+    }
+    
+    .input-group .input-group-addon .fa {
+        background-color: #ebf2f9;
+        padding: 5px;
     }
 }
