--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -43,6 +43,7 @@ body {
     flex: 1 1 auto;
     width: 100vw;
     max-height: 100vw;
+    background-color: #f8f294;
 }
 
 .content {
@@ -91,6 +92,7 @@ header {
     display: flex;
     flex-direction: column;
 }
+
 #logout,
 #update {
     background-color: #ee3333;
@@ -625,7 +627,9 @@ input:checked~label {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
+
 /* This is for the remaining Characters in a text field */
+
 #charcount {
     flex-basis: 100%;
     justify-content: center;
@@ -651,6 +655,7 @@ input:checked~label {
     background-color: #D9853B;
     padding: 5px;
 }
+
 
 /*
 *
@@ -1306,6 +1311,8 @@ input:checked~label {
     .review-items {
         display: flex;
         flex-direction: column;
+        flex-wrap: wrap;
+        margin-top: 10px;
     }
     .review {
         display: flex;
@@ -1322,12 +1329,14 @@ input:checked~label {
         padding-bottom: 10px;
         display: flex;
         flex-direction: row;
+        max-width: calc(99%);
     }
     .odd {
         background-color: #c4ccf3;
         padding-bottom: 10px;
         display: flex;
         flex-direction: row;
+        max-width: calc(99%);
     }
     .review.col1 {
         order: 1;
@@ -1457,7 +1466,6 @@ input:checked~label {
         order: 2;
         padding-right: 3px;
     }
-    
     .input-group .input-group-addon .fa {
         background-color: #ebf2f9;
         padding: 5px;
